--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>Your Repositories</title>
     <link rel="stylesheet" href="css/app.css">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <script src="https://use.fontawesome.com/d2d801d2e0.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/locale/af.js"></script> -->
   </head>
